[Zafir] Fixing a bug with control overlap, plus some CSS cleanup

--- a/Zafir/zafir.css
+++ b/Zafir/zafir.css
@@ -65,6 +65,10 @@ select.sheet-dtype {
   width: 60px;
 }
 
+.itemcontrol {
+  z-index: 99;
+}
+
 .sheet-3colrowx,
 .sheet-2colrowx {
   display: block;
@@ -123,6 +127,14 @@ select.sheet-dtype {
 
 .sheet-tracker .repitem {
   margin-bottom: 4px;
+}
+
+.sheet-tracker input[type=text] {
+  width: 80%;
+}
+
+.sheet-tracker input[type=number] {
+  width: 18%;
 }
 
 .sheet-res button.sheet-btn,
